# Use-of-force-classifier

./: Classifier_cases_use_of_force-JpLima.ipynb  Classifier_cases_use_of_force.ipynb  Classifier_use_of_force.ipynb  README.md
Use-of-force-classifier/: Makefile  README.md  pyproject.toml
Use-of-force-classifier/notebooks/: Classifier_cases_use_of_force.ipynb
Use-of-force-classifier/use_of_force_classifier/: data_acquisition.py
datasets/: Use_Of_Force.csv
